Coverity analysis defect 111481: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Sharding EMEA 2021-05-03
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/s/sharding_state_recovery.cpp:134: UNINIT_CTOR 111481 The compiler-generated constructor for this class does not initialize "_minOpTimeUpdaters".

            Assignee:
            Paolo Polato
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: