SERVER-51360 Fix Uninitialized scalar field defect raised by Coverity.